--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "week18-hw-scrapping",
+  "name": "mongoose_skeleton",
   "version": "1.0.0",
-  "description": "app scraps articles and allows users to post/delete notes",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/poberoi/Week18-HW.git"
-  },
-  "author": "Puneet Oberoi",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/poberoi/Week18-HW/issues"
-  },
-  "homepage": "https://github.com/poberoi/Week18-HW#readme",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "cheerio": "^0.22.0",
-    "express": "^4.14.0",
-    "express-handlebars": "^3.0.0",
-    "mongoose": "^4.6.0",
-    "request": "^2.74.0"
+    "body-parser": "^1.15.0",
+    "cheerio": "^0.20.0",
+    "express": "^4.13.4",
+    "mongoose": "^4.4.6",
+    "morgan": "^1.7.0",
+    "request": "^2.69.0"
   }
 }
